# LLMs-Optimization

./: .env.example  .gitignore  AGENTS.md  Dockerfile.vllm-xxhash  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
configs/experiments/: freewin-kv-fp8.compose.yml  freewin-merge.compose.yml  freewin-prefix-xxhash.compose.yml
data/manifests/: model-qwen3.5-2b.json
docs/architecture/: repo-structure.md
docs/baseline/: gpqa-benchmark.md  local-compose.md  model-download.md  results.md  setup.md  trace-benchmark.md
docs/optimization/: free-wins.md
docs/superpowers/plans/: 2026-07-08-repo-structure.md  2026-07-09-local-accuracy-baseline.md  2026-07-10-h01-benchmark-harness.md  2026-07-11-experiment1-runner.md
results/experiment1/disable-access-log-01/: experiment.json  (+3 more)
scripts/: build_gpqa_trace.py  check_server_health.py  download_model.py  evaluate_gpqa_results.py  run_serving_sweep.py  run_trace_benchmark.py  summarize_experiment.py  summarize_trace_runs.py
src/backend_llms_inference_optimization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/inference_opt/: __init__.py
tests/: test_benchmark_report.py  test_benchmark_runner.py  test_benchmark_scoring.py  test_build_gpqa_trace_script.py  test_evaluate_gpqa_results_script.py  test_gpqa_eval.py  test_gpqa_trace_builder.py  test_health.py  test_local_compose.py  test_model_download.py  test_phase0_setup.py  test_run_trace_benchmark_script.py  test_serving_experiment.py  test_serving_sweep.py  test_summarize_experiment_script.py  test_trace_loader.py
(+137 files in other folders)
